--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,11 @@
 	     <version>4.12</version>
 	     <scope>test</scope>
 	</dependency>
+	<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+
   </dependencies>
 </project>
